--- a/ejemploDeBlog/index.html
+++ b/ejemploDeBlog/index.html
@@ -15,11 +15,8 @@
   <body>
     <div class="container">
       <div class="row">
-        <div id="autors-list" class="col-12 col-md-3">
-          <h1>
-            Principales contribuidores (aquí va a ir una lista con los autores
-            de los posts)
-          </h1>
+        <div id="autors-list" class="row col-12 col-md-3">
+          <ul id="autor-entries" class="list-group"></ul>
         </div>
         <div id="main-posts" class="col-12 col-md-6"></div>
         <div class="col-12 col-md-3">
