--- a/ejercicioEventos2/index.html
+++ b/ejercicioEventos2/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
-  </head>
-  <body>
-    <form action="" class="bg-dark text-white border rounded shadow p-3">
-      <div class="form-group">
-        <label for="">Nombre completo:</label>
-        <input type="text" class="form-control" />
-      </div>
-      <div class="form-group">
-        <label for="">Correo:</label>
-        <input type="text" class="form-control" />
-      </div>
-      <div class="form-group">
-        <label for="">Password</label>
-        <input type="text" class="form-control" />
-      </div>
-      <button class="btn btn-primary">Crear usuario</button>
-    </form>
-  </body>
+</head>
+<body>
+<div class="container row">
+    <div class="container col-6">
+        <form id="myForm" class="bg-dark text-white border rounded shadow p-3">
+            <div class="form-group">
+                <label for="name">Nombre completo:</label>
+                <input type="text" id="name" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="email">Correo:</label>
+                <input type="text" id="email" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" class="form-control" />
+            </div>
+            <button type="submit" class="btn btn-primary">Crear usuario</button>
+        </form>
+    </div>
+    <div class="container col-6">
+        <h2>Usuarios</h2>
+        <ul id="userList" class="list-group"></ul>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/JS-Kodemia/ejercicioEventos2/js/main.js"></script>
+</body>
 </html>
