--- a/ejercicioEventos3/index.html
+++ b/ejercicioEventos3/index.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <title>Formulario de productos</title>
-</head>
-<body>
-    <div class="container-form-productlist">
-        <div class="container col-6">
-            <form id="productForm" class="bg-primary text-white border rounded shadow p-3">
-                <div class="form-group">
-                    <label for="name">Nombre del Producto</label>
-                    <input type="text" id="name" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="name">Descripción</label>
-                    <input type="text" id="name" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="name">Precio</label>
-                    <input type="text" id="name" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="name">Categoria</label>
-                    <input type="text" id="name" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="name">URL de la imagen</label>
-                    <input type="text" id="name" class="form-control">
-                </div>
-                <button type="button" class="btn btn-dark">Guardar</button>
-            </form>
-        </div>
-        <div class="container col-12">
-            <h2 class="text-center">Prouctos</h2>
-            <ul id="productsList" class="list-group"></ul>
-        </div>
+  </head>
+  <body>
+    <div class="container-form-productlist row">
+      <div class="container col-4">
+        <form
+          id="productForm"
+          class="bg-primary text-white border rounded shadow p-3"
+        >
+          <div class="form-group">
+            <label for="productName">Nombre del Producto</label>
+            <input type="text" id="productName" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label for="productDescription">Descripción</label>
+            <input type="text" id="productDescription" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label for="productPrice">Precio</label>
+            <input type="text" id="productPrice" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label for="productCategory">Categoria</label>
+            <input type="text" id="productCategory" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label for="productImageUrl">URL de la imagen</label>
+            <input type="text" id="productImageUrl" class="form-control" />
+          </div>
+          <div class="gap-2 d-flex justify-content-end">
+          <button type="button" class="btn btn-dark d-flex justify-content-end" onclick="addProduct()">
+            Guardar
+          </button>
+          </div>
+        </form>
+      </div>
+      <div class="container row col-6">
+        <div class="container text-center">
+        <button type="button" class="btn btn-dark" aria-label="Search">
+          <span class="DocSearch-Button-Container">
+            <svg
+              width="20"
+              height="20"
+              class="DocSearch-Search-Icon"
+              viewBox="0 0 20 20"
+              aria-hidden="true"
+            >
+              <path
+                d="M14.386 14.386l4.0877 4.0877-4.0877-4.0877c-2.9418 2.9419-7.7115 2.9419-10.6533 0-2.9419-2.9418-2.9419-7.7115 0-10.6533 2.9418-2.9419 7.7115-2.9419 10.6533 0 2.9419 2.9418 2.9419 7.7115 0 10.6533z"
+                stroke="currentColor"
+                fill="none"
+                fill-rule="evenodd"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+            </svg>
+            <span class="DocSearch-Button-Placeholder">Filtro</span>
+          </span>
+        </button>
+      </div>
+        <h2 class="text-center">Productos</h2>
+        <ul id="productsList" class="row d-flex justify-content-around"></ul>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/ejercicioEventos3/js/main.js"></script>
