--- a/ejercicioFormBlog/index.html
+++ b/ejercicioFormBlog/index.html
@@ -12,7 +12,9 @@
     />
   </head>
   <body>
-    <form id="post-form" action="" class="bg-dark text-white p-3">
+  <div class="container-form-list row d-flex justify-content-center">
+    <div class="container col-12 col-md-4 p-3">
+       <form id="post-form" action="" class="bg-dark text-white p-3 row d-flex justify-content-center">
       <div class="form-group">
         <label for="">Titulo</label>
         <input
@@ -45,11 +47,24 @@
         Guardar entrada
       </button>
     </form>
+  </div>
+  <div class="container col-12 col-md-8">
+      <h2 class="text-center">Posts</h2>
+      <ul id="post-list" class="list-group">
+          <li class="card text-white bg-dark mb-3" style="max-width: 30rem;">
+            <div class="card-header"><h5>Como tus habitos pueden mejorar tu día a día</h5></div>
+            <div class="card-body">
+            <p class="card-title">La importancía de mofidicar tus habitos y como al hacer pequeños cambios podras notar grandes cambios en tu vida</p>
+            <p class="card-text"><em>Yair Guadarrama</em></p>
+          </li>  
+      </ul>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
     <script src="js/main.js"></script>
+  </div>  
   </body>
 </html>
