--- a/ejercicioFormBlog/index.html
+++ b/ejercicioFormBlog/index.html
@@ -48,16 +48,10 @@
       </button>
     </form>
   </div>
-  <div class="container col-12 col-md-8">
-      <h2 class="text-center">Posts</h2>
-      <ul id="post-list" class="list-group">
-          <li class="card text-white bg-dark mb-3" style="max-width: 30rem;">
-            <div class="card-header"><h5>Como tus habitos pueden mejorar tu día a día</h5></div>
-            <div class="card-body">
-            <p class="card-title">La importancía de mofidicar tus habitos y como al hacer pequeños cambios podras notar grandes cambios en tu vida</p>
-            <p class="card-text"><em>Yair Guadarrama</em></p>
-          </li>  
-      </ul>
+  <div class="container col-12 col-md-7 col-lg-8">
+      <h2 class="text-center d-flex justify-content-center">Posts</h2>
+      <ul id="post-list" class="list-group d-flex justify-content-center row">
+       </ul>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
