--- a/localStorage/index.html
+++ b/localStorage/index.html
@@ -3,17 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
   </head>
   <body>
-    <h1 id="user-alert">Bienvenido a mi app</h1>
-    <form action="">
-      <input id="user-name" type="text" placeholder="ingresa un usuario" />
-      <button id="guardar-usuario">Verifica usuario</button>
-    </form>
-    <div>
-      <ul id="user-list"></ul>
+  <div id="container-welcome-card" class="col-12">
+   <div id="welcome-card"  class="col-7 bg-primary text-white row d-flex justify-content-center mx-auto p-2">
+    <div class="card" style="width: 18rem;">
+      <img src="https://media.istockphoto.com/id/1371547852/es/foto/hola-y-bienvenida-caja-de-luz-blanca-escrita-sentada-sobre-fondo-azul.jpg?s=612x612&w=0&k=20&c=1H91gRYVx9ZZzxHmX6099zVmVe711w6VyoB6cqEmjeM=" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h1 class="card-text">Bienvenido de nuevo</h1>
+      </div>
     </div>
+   </div>
+  </div>
+  <div id="container-login-user" class="col-12">
+   <form id="login-user" class="col-7 bg-black text-white row d-flex justify-content-center mx-auto p-2">
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" name="password" class="form-control" id="exampleInputPassword1" >
+    </div>
+    <button id="save-btn" type="button" class="btn btn-primary col-4">Log In</button>
+  </form>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/localStorage/js/main.js"></script>
   </body>
 </html>
